--- a/src/css/style.css
+++ b/src/css/style.css
@@ -104,6 +104,10 @@
   justify-content: center;
 }
 
+.gallery-link {
+  overflow: hidden;
+}
+
 .description-list {
   display: flex;
   justify-content: space-around;
